@@ -146,3 +146,7 @@
 	X-Box; Titel anpassbar durch XBOX_CAPTION
 	
 	* phonebook: als Bibliothek in den Callmonitor laden
+
+2006-04-02
+
+	callmonitor-0.8 veröffentlicht
